# llm-zoomcam-2026

./: .gitignore  pyproject.toml
01-agentic-rag/code/: agents.ipynb  ingest.py  notebook.ipynb  peristent_rag_ingest.ipynb  persistent_rag.ipynb  rag_cleaned.ipynb  rag_helper.py
02-vector-search/code/: rag_helper.py  test.ipynb  vector_search.ipynb  vector_search_pgvector.ipynb
02-vector-search/llm-zoomcamp-onnx/: download.py  embedder.py  onnx.ipynb  pyproject.toml
homework/hwk-1/: rag_helper.py  responses.ipynb
homework/hwk-2/: hw.ipynb  main.py  pyproject.toml
